# control-orogen-auv_control

./: .gitignore  6dControl.hpp  CMakeLists.txt  README.markdown  README.md  auv_control.orogen  manifest.xml
doc/: thruster_matrix_example.odg
scripts/: test.rb
tasks/: AUVAlignedControler.cpp  AUVAlignedControler.hpp  AUVAlignedController.cpp  AUVAlignedController.hpp  AUVAlignedVelocityControler.cpp  AUVAlignedVelocityControler.hpp  AUVAlignedVelocityController.cpp  AUVAlignedVelocityController.hpp  AUVForceTorqueController.cpp  AUVForceTorqueController.hpp  AUVOptimalOrientationController.cpp  AUVOptimalOrientationController.hpp  AUVRelativeController.cpp  AUVRelativeController.hpp  AUVWaypointNavigator.cpp  AUVWaypointNavigator.hpp  AUVWorldControler.cpp  AUVWorldControler.hpp  AUVWorldController.cpp  AUVWorldController.hpp  AccelerationController.cpp  AccelerationController.hpp  AlignedController.cpp  AlignedController.hpp  AlignedPositionController.cpp  AlignedPositionController.hpp  AlignedToBody.cpp  AlignedToBody.hpp  AlignedVelocityController.cpp  AlignedVelocityController.hpp  Base.cpp  Base.hpp  BasePIDController.cpp  BasePIDController.hpp  CMakeLists.txt  CommandInjection.cpp  CommandInjection.hpp  ConstantCommand.cpp  ConstantCommand.hpp  ConstantCommandGroundAvoidance.cpp  (+35 more)
test/: auv_control::PIDController.yml  auv_control::ThrusterForce2BodyEffort.yml  auv_control::ThrustersFeedback.yml  auv_control::ThrustersInput.yml  auv_control::WorldToAligned.yml  test_base.rb  test_command_injection.rb  test_pid_controller.rb  test_thruster_feedback.rb  (+3 more)
